# fastapi-advanced-boilerplate

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  create_superuser.py  database.db  docker-compose.yml  export.csv  log_precios.txt  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  utils.py
app/api/: dependencies.py
app/api/v1/: api.py  auth.py  users.py
app/core/: config.py  email.py  exceptions.py  logger.py  security.py
app/crud/: base.py  user.py
app/db/: init_db.py  session.py
app/models/: base.py  enums.py  user.py
app/routers/: items.py
app/schemas/: token.py  user.py
migrations/: env.py
migrations/versions/: d5d8a357e38d_init_con_uuids.py
tests/: conftest.py  test_auth.py  test_users.py
